Funcionalidades básicas completadas

--- a/css/principal.css
+++ b/css/principal.css
@@ -5,7 +5,6 @@
     font-family: 'Karla', sans-serif;
 }
 
-
 /* HEADER */
 
 .header{
@@ -86,10 +85,8 @@
 }
 
 
-/* SECCIÓN HAMBURGUESA*/
 .seccion_hamburguesas, .seccion_pollos, .seccion_combos{
     width: 90%;
-    
     min-height: 1200px;
     max-height: auto;
     height: auto;
@@ -103,12 +100,16 @@
 .contenedor_hamburguesa{
     width: 35%;
     height: 250px;
-    /*
-    min-height: 400px;
-    max-height: auto;*/
     background-color: aquamarine;
     align-self:flex-start;
+    cursor:pointer;
+    transition-duration: 0.5s;
+    transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1);
+    border-radius: 10px;
+}
 
+.contenedor_hamburguesa:hover{
+    transform: scale(0.9);
 }
 
 .contenedor_imagen{
@@ -116,12 +117,16 @@
     height: 100%;
     /*flex-grow: 2;*/
     background-color: brown;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
 }
 
 .imagen_producto{
     width: 100%;
     height: 100%;
     object-fit: cover;
+        border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
 }
 
 .contenedor_descripcion{
@@ -129,6 +134,8 @@
     height: 100%;
    /* flex-grow: 2;*/
     background-color: chartreuse;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
 }
 
 .formulario_comprar{
@@ -138,6 +145,9 @@
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
+    border-radius: 10px;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
 }
 
 .descripcion_producto{
@@ -168,4 +178,32 @@
 }
 
 
-/*SECCION POLLOS */
+/* FOOTER*/
+.footer{
+    width: 100%;
+    height: 200px;
+    background-color:darkorchid;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.parrafo-footer{
+    font-size: 30px;
+    font-weight: 800;
+}
+
+.contenedor_redesSociales{
+    width: 80%;
+    height: 70%;
+    background-color: bisque;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+
+.fab{
+    font-size: 40px;
+}
