--- a/css/estiloBasePrincipal.css
+++ b/css/estiloBasePrincipal.css
@@ -1,3 +1,14 @@
+:root{
+    --color-base-crema:#F2DFC0;
+    --color-base-arena: #EDBA6B;
+    --color-base-amarillo: #F5AB0E;
+    --color-base-naranja: #F76B07;
+    --color-base: rgb(219, 26, 26);
+    --color-base-rojoOscuro: #A01207;
+    --color-letra: #FFF7F7;
+}
+
+
 *{
     padding: 0;
     margin: 0;
@@ -5,13 +16,15 @@
     font-family: 'Karla', sans-serif;
 }
 
+
+
 /* HEADER */
 
 .header{
     width: 100%;
     min-height: 80px;
     max-height: auto;
-    background-color: aquamarine;
+    background-color: var(--color-base-rojoOscuro);
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -26,7 +39,7 @@
 .navegacion{
     width: 600px;
     height: 80px;
-    background-color: blueviolet;
+    background-color: var(--color-base-rojoOscuro);
 }   
 
 .li_navegacion{
@@ -37,6 +50,7 @@
 .enlace_nav{
     text-decoration: none;
     font-weight: bold;
+    color: var(--color-letra);
 }
 
 .ul_navegacion{
@@ -52,7 +66,7 @@
 .articulo_principal{
     width: 100%;
     height: 100%;
-    background-color: cadetblue;
+    background-color: var(--color-base-arena);
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -67,17 +81,28 @@
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
-    background-color: yellow;
+    background-color: var(--color-base-arena);
     margin-bottom: 50px;
 }
 
 .seccion_tituloHamburguesas, .seccion_tituloPollos, .seccion_tituloCombos{
     
-    background-color: purple;
+    background-color: var(--color-base-rojoOscuro);
 }
 
-.titulo_principal, .titulo_producto{
-    font-size: 50px;
+.titulo_principal{
+    font-size: 80px;
+    font-family: 'Chango', cursive;
+}
+
+.nombreCliente{
+    font-size: 40px;
+    font-family: 'Chango', cursive;
+}
+
+.titulo_producto{
+ font-size: 80px;
+ font-family: 'Luckiest Guy', cursive;
 }
 
 .titulo_productos{
@@ -90,7 +115,7 @@
     min-height: 1200px;
     max-height: auto;
     height: auto;
-    background-color: yellowgreen;
+    background-color: var(--color-base-arena);
     display: flex;
     justify-content:space-around;
     align-items: center;
@@ -133,7 +158,7 @@
     width: 100%;
     height: 100%;
    /* flex-grow: 2;*/
-    background-color: chartreuse;
+    background-color: var(--color-base-amarillo);
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
 }
@@ -165,16 +190,17 @@
 .btnComprar{
     width: 30%;
     height: 50px;
-    background-color: coral;
+    background-color: var(--color-base-rojoOscuro);
     border: none;
     outline: none;
     border-radius: 8px;
     cursor:pointer;
     font-weight:600;
+    color: white;
 }
 
 .btnComprar:hover{
-    background-color: rgb(240, 92, 38);
+    background-color: #cf1d10;
 }
 
 
@@ -182,7 +208,7 @@
 .footer{
     width: 100%;
     height: 200px;
-    background-color:darkorchid;
+    background-color:var(--color-base-naranja);
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -197,7 +223,7 @@
 .contenedor_redesSociales{
     width: 80%;
     height: 70%;
-    background-color: bisque;
+    background-color: var(--color-base-naranja);
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -206,4 +232,5 @@
 
 .fab{
     font-size: 40px;
+    color: black;
 }
