--- a/css/estiloLogin.css
+++ b/css/estiloLogin.css
@@ -1,5 +1,15 @@
+:root{
+    --color-base-crema:#F2DFC0;
+    --color-base-arena: #EDBA6B;
+    --color-base-amarillo: #F5AB0E;
+    --color-base-naranja: #F76B07;
+    --color-base: rgb(219, 26, 26);
+    --color-base-rojoOscuro: #A01207;
+    --color-letra: #FFF7F7;
+}
+
 body{
-    background-color: aquamarine;
+    background-color: var(--color-base-crema);
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -17,9 +27,14 @@ body{
     position: relative;
 }
 
+.tituloLogin{
+    font-family: 'Luckiest Guy', cursive;
+    font-size: 50px;
+}
+
 .formulario{
     margin-top: 50px;
-    background-color: tomato;
+    background-color: var(--color-base-rojoOscuro);
     width: 500px;
     height: 300px;
     display: flex;
@@ -31,6 +46,11 @@ body{
 
 .labelUsuarioLogin{
     margin-top: 15px;
+    color: var(--color-letra);
+}
+
+.labelContraseñaLogin{
+     color: var(--color-letra);
 }
 
 .usuario, .contraseña{
@@ -53,15 +73,16 @@ body{
     cursor: pointer;
     width: 100px;
     height: 40px;
-    background-color: green;
+    background-color: var(--color-base-amarillo);
     outline: none;
     border: none;
     border-radius: 5px;
     cursor: pointer;
+    font-weight: 600;
 }
 
 .btnLogin:hover, .btnVistaRegistrate:hover, .btnVolverInicio:hover{
-    background-color:rgb(30, 255, 0);
+    background-color:var(--color-base-naranja);
 }
 
 .enlaceVistaRegistrate, .enlaceVolverInicio{
