--- a/css/estilodePedido.css
+++ b/css/estilodePedido.css
@@ -1,11 +1,26 @@
+:root{
+    --color-base-crema:#F2DFC0;
+    --color-base-arena: #EDBA6B;
+    --color-base-amarillo: #F5AB0E;
+    --color-base-naranja: #F76B07;
+    --color-base: rgb(219, 26, 26);
+    --color-base-rojoOscuro: #A01207;
+    --color-letra: #FFF7F7;
+}
 .tituloPedido{
     text-align: center;
+    font-family: 'Luckiest Guy', cursive;
+    font-size: 50px;
+}
+
+body{
+    background-color: var(--color-base-crema);
 }
 
 .articuloPedido{
     width: 100%;
     height: 100vh;
-    background-color: chartreuse;
+    background-color: var(--color-base-crema);
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -14,19 +29,19 @@
 .seccion_pedido{
     width:50%;
     height: 100%;
-    background-color: bisque;
+    background-color: var(--color-base-crema);
 }
 
 .formularioPedido{
     width: 100%;
     height: 100%;
-    background-color: aqua;
+    background-color: var(--color-base-crema);
 }
 
 .contenedor_pedidoImagen{
     width: 100%;
     height: 50%;
-    background-color: blueviolet;
+    background-color: var(--color-base-crema);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -47,7 +62,7 @@
 .contenedor_pedidoDatos{
     width: 100%;
     height: 200px;
-    background-color: aquamarine;
+    background-color: var(--color-base-crema);
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
@@ -67,13 +82,13 @@
 .seccion_pedidoCompra{
     width: 50%;
     height: 100%;
-    background-color: darkorange;
+    background-color: var(--color-base-crema);
 }
 
 .contenedorPedidoCantidad{
     width: 100%;
     height: 40%;
-    background-color: lightgreen;
+    background-color: var(--color-base-crema);
     display: flex;
     flex-direction: column;
     justify-content: space-around;
@@ -107,7 +122,7 @@
 .btnCalculoPedido{
     width: 100px;
     height: 45px;
-    background-color: coral;
+    background-color: var(--color-base-naranja);
     border: none;
     outline: none;
     border-radius: 8px;
@@ -118,14 +133,14 @@
 .contenedorBtnVolver{
     width: 100%;
     height: 160px;
-    background-color: aqua;
+    background-color: var(--color-base-crema);
     position: relative;
 }
 
 .btnVolver{
         width: 100px;
     height: 45px;
-    background-color: coral;
+    background-color: var(--color-base-naranja);
     border: none;
     outline: none;
     border-radius: 8px;
@@ -154,7 +169,7 @@
 .contenedor_datosPago{
     width: 100%;
     height: 50%;
-    background-color: aqua;
+    background-color: var(--color-base-crema);
     display: flex;
    flex-direction: column;
     justify-content:space-around;
@@ -164,12 +179,16 @@
 .btnRealizarCompra{
       width: 100px;
     height: 45px;
-    background-color: green;
+    background-color: var(--color-base-naranja);
     border: none;
     outline: none;
     border-radius: 8px;
     cursor:pointer;
     font-weight:600;
+}
+
+.btnCalculoPedido:hover, .btnVolver:hover:hover, .btnRealizarCompra:hover{
+    background-color:#ee4613;
 }
 
 .enlaceRealizarCompra{
