--- a/css/estilodeRegistrate.css
+++ b/css/estilodeRegistrate.css
@@ -1,8 +1,22 @@
+:root{
+    --color-base-crema:#F2DFC0;
+    --color-base-arena: #EDBA6B;
+    --color-base-amarillo: #F5AB0E;
+    --color-base-naranja: #F76B07;
+    --color-base: rgb(219, 26, 26);
+    --color-base-rojoOscuro: #A01207;
+    --color-letra: #FFF7F7;
+}
+
+body{
+    background-color: var(--color-base-crema);
+}
+
 /*FORMULARIO */
 .contenedorRegistro{
     width: 100%;
     height: 100%;
-    background-color: darkkhaki;
+    background-color: var(--color-base-crema);
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -13,13 +27,15 @@
 .titulo_registrate{
     text-align: center;
     margin: 40px;
+    font-family: 'Luckiest Guy', cursive;
+    font-size: 50px;
 }
 
 .formulario{
     width: 40%;
     min-height: 550px;
     max-height: auto;
-    background-color: violet;
+    background-color: var(--color-base-rojoOscuro);
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
@@ -28,17 +44,21 @@
 
 .labelRegistro{
     font-size: 20px;
+    color: white;
 }
 
 .inputRegistro{
     width: 50%;
     height: 50px;
+    outline: none;
+    border: none;
+    border-radius: 8px;
 }
 
 .btnRegistrate, .btnVolverInicio{
     width: 100px;
     height: 45px;
-    background-color: coral;
+    background-color: var(--color-base-naranja);
     border: none;
     outline: none;
     border-radius: 8px;
